--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -7,8 +7,9 @@
 	border-radius: 6px;
 	padding: 20px 20px 0 20px;
 	position: absolute;
-	top: 68px;
+	top: 60px;
 	right: 50px;
+	background-color: white;
 }
 .Menu ul {
 	list-style: none;
